--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -320,6 +320,8 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
+
+    <script src="js-test/cart.js"></script>
 </body>
 
 </html>
